# pc80b-bleak

./: .gitignore  LICENSE  README.md  datatypes.py  pc-80b.py  pc80b-bleak.desktop  pyproject.toml  setup.py
.github/workflows/: build-dpkg.yml
action-build-dpkg/: Dockerfile  README.md  action.yml  entrypoint.sh
debian/: changelog  control  copyright  install  py3dist-overrides
pc80b/: __main__.py  datatypes.py
pc80b-bleak/: __main__.py  ble.py  datatypes.py  drw.py  gst.py  gui.py  sgn.py
pc80b_bleak/: __main__.py  ble.py  datatypes.py  drw.py  gst.py  gui.py  sample.py  sgn.py  src.py  tst.py
sample-data/: 2021-12-30.onebeat.txt  2021-12-30.snippet.txt
scripts/: pc80b-bleak
test/: pylint.conf  test_black.py  test_mypy.py  test_pylint.py
